# axum_htmx_template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  package.json  tailwind.config.cjs
src/: api.rs  db_client.rs  lib.rs  main.rs  pages.rs
src/pages/: home_page.rs  page_utils.rs
