[package]
name = "axum_htmx_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros", "headers"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
maud = { version = "0.25.0", features = ["axum"] }
futures-util = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["sync"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
serde_json = "1.0.107"
